# rsm3034h_assignment1

./: .env  .env_example  main.py  pyproject.toml  simple_main.py
conf/: config.yaml
main/: sandbox.ipynb
main/data/: __init__.py  download_data.py  panel_data.py
main/data/download/: __init__.py  compustat.py  crsp.py  ekp.py  famafrench.py
main/utils/: __init__.py  files.py  pyplot_config.py
outputs/2026-01-15/12-12-18/.hydra/: hydra.yaml
outputs/2026-01-15/12-13-41/.hydra/: hydra.yaml
outputs/2026-01-15/12-14-30/.hydra/: hydra.yaml
outputs/2026-01-15/12-27-48/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-15/12-28-26/.hydra/: hydra.yaml
outputs/2026-01-15/13-36-03/.hydra/: hydra.yaml
outputs/2026-01-15/13-36-41/.hydra/: hydra.yaml
outputs/2026-01-15/13-49-25/.hydra/: hydra.yaml
outputs/2026-01-16/16-35-35/.hydra/: hydra.yaml
outputs/2026-01-16/16-45-50/.hydra/: hydra.yaml
outputs/2026-01-16/16-46-18/.hydra/: hydra.yaml
outputs/2026-01-16/16-47-48/.hydra/: hydra.yaml
outputs/2026-01-16/16-50-25/.hydra/: hydra.yaml
outputs/2026-01-17/07-19-09/.hydra/: hydra.yaml
outputs/2026-01-17/07-19-27/.hydra/: hydra.yaml
outputs/2026-01-17/07-19-45/.hydra/: hydra.yaml
outputs/2026-01-17/07-20-42/.hydra/: hydra.yaml
outputs/2026-01-17/07-21-52/.hydra/: hydra.yaml
outputs/2026-01-17/07-30-50/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-17/07-34-27/.hydra/: hydra.yaml
outputs/2026-01-17/07-45-14/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-17/07-52-29/.hydra/: hydra.yaml
rm3034h.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+102 files in other folders)
